# mediaReader.GUI

./: MediaPlayerInterface.qmlproject  MediaPlayerInterface.qmlproject.qtds  qmlmodules
client/: CMakeLists.txt  IObserver.h  ISubject.h  Observer.h  Subject.h  communication_interface.cpp  communication_interface.h  main.cpp  someip_client.cpp  someip_client.h  someip_client.json
content/: App.qml  ButtonManager.cpp  ButtonManager.h  CMakeLists.txt  Screen00.ui.qml  Screen01.ui.qml  main.cpp
imports/: CMakeLists.txt
imports/MediaPlayerInterface/: CMakeLists.txt  qmldir
imports/MediaPlayerInterface/designer/: plugin.metainfo
prototype/: CMakeLists.txt  MediaPlayerInterface.qmlproject.qtds  qmlmodules
prototype/content/: Screen00.qml
prototype/src/: import_qml_plugins.h
src/: import_qml_plugins.h
